--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -1,121 +1,184 @@
 .profileForm {
-  padding: 50px;
-  margin-top: -64px;
-  height: calc(100vh - 64px);
-  display: flex;
+  position: relative;
+  /* padding: 50px; */
+  /* margin-top: -64px; */
+  height: 85vh;
+  /* display: flex; */
+  width: 100vw;
   flex-direction: column;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
 }
 .profileForm .title {
   color: #eee;
-  font-size: 32px;
-  margin-bottom: 50px;
+  font-size: 2.5rem;
+  margin-bottom: 2vh;
+  margin-top : 1vh;
   width: 100%;
 }
 .profile {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  margin: 0 5vw;
 }
 
 .sections {
   display: flex;
-}
-.userProfile {
-  width: 400px;
-  height: 470px;
+  position: relative;
   background-color: #eee;
   border-radius: 20px;
+  width: 90vw;
+  height: fit-content;
+}
+
+.calendar{
+  margin: 0px auto;
+  width: 60vw;
+  /* height: ; */
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.userProfile {
+  height: 71.8vh;
+  position: relative;
   border-style: none;
-  padding: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-right: 50px;
 }
 
 .profileImg {
-  width: 70px;
-  height: 70px;
+  width: 9vw;
+  height: 8vw;
   border-radius: 20px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
 }
 
 .userInfoForm {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 20px;
+  width: 30vw;
+  padding: 1.5vw;
+  border-style: none dotted none none;
+
 }
 .userInfoForm .profileRow {
   display: flex;
-  margin-bottom: 20px;
+  /* margin-bottom: 2vh; */
+    
+
 }
 .userInfoForm .userInfoData {
+  font-size: 1.3rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  /* padding: 0px 1vh; */
 }
-
+.userInfoName{
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 0 0 0 1vw;
+}
 .userInfoForm .inputRow {
-  margin-bottom: 20px;
+  /* font-size: 1.5rem; */
+  margin-bottom: 2rem;
+  /* width: 100%; */
   display: flex;
   justify-content: space-between;
+
 }
 
 .userInfoForm .inputRow .inputRowHalf {
+  /* font-size: 1.5rem; */
   width: 40%;
 }
 
 .userInfoForm .userInfoData label {
   margin: 0;
-  font-size: 13px;
+  font-size: 1.3vw;
 }
 .userInfoForm .userInfoData input {
   outline: none;
   border: none;
   background-color: transparent;
   padding: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+.userInfoName input{
+  outline: none;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  width: 100%;
 }
 
 .editbirth {
   width: 50px;
   text-align: center;
 }
+
+
+.userInfoName.userInfoDataEdit input {
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+}
+
 .userInfoData.userInfoDataEdit input {
   border-bottom: 1px solid rgba(0, 0, 0, 1);
 }
 .editRow {
-  width: 100%;
+  position: absolute;
+  /* width: 100%; */
   text-align: right;
+  top : 65vh;
+  left : 27vw;
 }
 
 .editRow .editBtn {
   border: none;
   padding: 0;
-  width: 24px;
+  /* width: 24px; */
 }
 .editBtn .editIcon {
-  width: 20px;
-  height: 20px;
+  width: 1.5vw;
+  height: 1.5vw;
+  /* background-color:rgba(255, 255, 255, 0); */
 }
-
+.rank{
+  font-size: 2vw;
+  width: fit-content;
+  height: fit-content;
+  float: right;
+  border: none;
+}
 .friendProfile {
+  position: relative;
   width: 800px;
   height: 470px;
   background-color: #eee;
   border-radius: 20px;
-  padding: 30px 100px;
-}
-.friendTitle {
   display: flex;
   align-items: center;
-  margin: 0;
-  margin-bottom: 20px;
+  /* vertical-align: middle; */
+  /* padding: 30px 100px; */
+}
+.friendTitle {
+  position: absolute;
+  top : 20px;
+  left : 25px;
+  display: flex;
+  align-items: center;
+  /* margin: ; */
+  /* margin : 25px 25px; */
+  /* margin-bottom: 20px; */
+
 }
 .mainTitle {
   font-size: 32px;
@@ -128,7 +191,10 @@
 .friends {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  width: fit-content;
+  justify-content: center;
+  max-width: 600px;
+  margin : 50px auto;
 }
 .friendInfo {
   width: 160px;
@@ -137,6 +203,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+  /* max-width: 160px; */
 }
 .friendProfileImg {
   width: 140px;
@@ -157,10 +224,41 @@
   background-color: red;
 }
 
-@media screen and (min-width: 1800px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media screen and (min-width: 1800px) {
   .userProfile {
-    width: 600px;
-    height: 670px;
+    width: 31vw;
+    height: 71.8vh;
   }
 
   .userInfoForm .userInfoData label {
@@ -168,10 +266,6 @@
   }
   .userInfoForm .userInfoData input {
     font-size: 28px;
-  }
-
-  .friendTitle {
-    margin-bottom: 50px;
   }
   .friendProfile {
     width: 1000px;
@@ -187,7 +281,10 @@
     border-radius: 20px;
     margin-right: 20px;
   }
-
+  .friends {
+    max-width: 800px;
+    margin : 0 auto;
+  }
   .editIcon {
     width: 50px;
     height: 50px;
@@ -206,4 +303,4 @@
     height: 160px;
     border-radius: 50%;
   }
-}
+} */
