--- a/frontend/src/components/Room/stream/StreamComponent.module.css
+++ b/frontend/src/components/Room/stream/StreamComponent.module.css
@@ -92,3 +92,53 @@ video {
   bottom : 0;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Poppins:wght@400;500;600&display=swap");
+
+.postitInput {
+    background-color:  #fff44f;
+    height: 80%;
+    width: 60%;
+    position: absolute;
+    text-align: center;
+    border-radius: 2px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.postit {
+    /* background-color: #ff3399; */
+    height: 80%;
+    width : 60%;
+    text-align: center;
+    font-size: 18px;
+    position : absolute;
+    color : #252525;
+    font-weight: bolder;
+    border-radius: 2px;
+    flex-direction: row;
+    align-items: center;
+}
+
+.keyword, .subKeyword {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+    color : #252525;
+    font-weight: bolder;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+}
+
+.informText .sendClockIcon {
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
