--- a/frontend/src/components/Modals/Rankfriend/Rankfriend.module.css
+++ b/frontend/src/components/Modals/Rankfriend/Rankfriend.module.css
@@ -14,7 +14,7 @@
 .modalForm {
     position: relative;
     width: 780px;
-    height: 580px;
+    height: fit-content;
     /* margin: 0 auto; */
     border-radius: 50px;
     background-color: #eee;
@@ -27,7 +27,7 @@
 .chartmodalForm {
     position: relative;
     width: 26vw;
-    height: 75vh;
+    height: fit-content;
     /* margin: 0 auto; */
     border-radius: 50px;
     background-color: #eee;
@@ -47,7 +47,7 @@
     /* margin-top: 10px; */
     /* display: flex; */
     width: 100%;
-    height: 35vh;
+    height: fit-content;
     border-radius: 0 0 10px 10px ;
     margin: -1% auto;
     /* margin-bottom: 7px; */
@@ -93,6 +93,7 @@
     font-weight: bold;
     text-align: center;
     /* margin-left: 41%; */
+    padding-bottom: 3%;
 }
 .tabs{
     /* margin: 0 auto; */
