--- a/frontend/src/components/Room/music/MusicPlayer.module.css
+++ b/frontend/src/components/Room/music/MusicPlayer.module.css
@@ -7,7 +7,8 @@
   height: 50px;
   /* width: 30%; */
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
+  left: 10px;
 }
 
 .playerIcon {
@@ -21,4 +22,20 @@
 .musicTitle {
   width: 100%;
   font-size: 18px;
+}
+.BtnRow {
+  display: flex;
+}
+
+.musicPlayerInitTitle {
+  margin-right: 10px;
+}
+
+.nextIcon {
+  margin-left: 10px;
+}
+@keyframes rotate_image {
+  100% {
+    transform: rotate(360deg);
+  }
 }
