--- a/frontend/src/components/Room/Room.module.css
+++ b/frontend/src/components/Room/Room.module.css
@@ -82,7 +82,7 @@ video {
 }
 .dock {
   width: 500px;
-  margin: 0 auto;
+  margin: auto auto;
   display: flex;
   justify-content: space-between;
   background-color: rgba(64, 69, 78, 1);
