[Add] Up down 게임 openvidu 서버 연동

--- a/frontend/src/components/Room/chat/Chat.module.css
+++ b/frontend/src/components/Room/chat/Chat.module.css
@@ -66,6 +66,7 @@
   font-weight: bold;
 }
 .msg-system{
+  margin-top: 1%;
   background-color: #3d3d3d;
   border-radius: 15px 15px 0px 0px;
   text-align: center;
