--- a/frontend/src/components/Modals/Game/Keyword.module.css
+++ b/frontend/src/components/Modals/Game/Keyword.module.css
@@ -29,6 +29,8 @@
     outline: none;
     cursor: pointer;
     border: 0;
+    /* width: fit-content; */
+    height: fit-content;
   }
   .modal > section {
     width: 600px;
@@ -61,7 +63,7 @@
     background-color: #08d9d6;
     margin-right: 20px;
 }
-.confirmBtn {
+.confirmBtn,.retryBtn {
     background-color: #08d9d6;
     width: 80px;
     height: 40px;
@@ -71,6 +73,7 @@
     font-weight: bold;
     padding: 13px;
     text-align: center;
+    margin : 45px;
   }
   .modal.openModal {
     display: flex;
@@ -80,14 +83,17 @@
     animation: modal-bg-show 0.3s;
   }
   .icon {
-    height: 120px;
-    width: 120px;
+    height: 148px;
+    width: 150px;
+    margin: 50px 0px 10px 0px;
+    display: flex;
+    justify-content: space-evenly;
   }
   
   .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
     height: 100%;
     font-family: 'Poppins', sans-serif;
@@ -119,6 +125,51 @@
     margin: 15px;
     flex-direction: column;
   }
+
+  .yanginformBorder {
+    align-items: center;
+    display: flex;
+    margin:  100px 0px 20px 0px;
+    flex-direction: column;
+  }
+  .forbiddeninformBorder {
+    align-items: center;
+    display: flex;
+    margin:  95px 0px 20px 0px;
+    flex-direction: column;
+  }
+  .failBorder {
+    align-items: center;
+    display: flex;
+    margin:  100px 0px 20px 0px;
+    flex-direction: column;
+  }
+.yanginfoText {
+  font-weight: bolder;
+  font-size: 18px;
+  width : fit-content;
+}
+.yangconfirmBtn {
+  background-color: #08d9d6;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    text-align: center;
+    margin : 50px 30px 0px 30px;
+    color: #252525ee;
+}
+.yangicon, .failicon {
+  height: 148px;
+  width: 150px;
+  margin: 0px 0px 10px 0px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.failicon
+
   .informText{
       font-weight: bolder;
       font-size: 20px;
@@ -130,12 +181,21 @@
     background-color: #eee;
     padding: 10px;
     font-size: 20px;
+    /* width: 500px; */
+    /* height: 32px; */
+    /* font-size: 15px; */
+    border: 0;
+    border-radius: 15px;
+    outline: none;
+    /* padding-left: 10px; */
+    /* background-color: rgb(233, 233, 233); */
   }
 
   .text {
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
+    margin-bottom: 2rem;
   }
   .targetText {
     text-align: center;
@@ -143,8 +203,13 @@
     font-weight: bolder;
     color: #ddda29;
   }
-  .infoText {
+  .greenText {
     text-align: center;
+    color: #29dd6e;
+  }
+  .gameText {
+    text-align: center;
+    color: #2959dd;
   }
 
   @keyframes modal-show {
@@ -218,8 +283,8 @@
 }
 
 .sendClockIcon {
-    width : 6%;
-    height : 30%;
+    width : 100px;
+    height : 100px;
 }
 
     @keyframes rotate-loading {
@@ -257,11 +322,14 @@
         100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
     }
 
-    @-o-keyframes rotate-loading {
-        0%  {transform: rotate(0deg);-ms-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -moz-transform: rotate(0deg);}
-        100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
+    @keyframes wingwingSiren {
+        0%  {transform: rotateY(0deg);-ms-transform: rotateY(0deg); -webkit-transform: rotateY(0deg); -o-transform: rotateY(0deg); -moz-transform: rotateY(0deg);}
+        100% {transform: rotateY(360deg);-ms-transform: rotateY(360deg); -webkit-transform: rotateY(360deg); -o-transform: rotateY(360deg); -moz-transform: rotateY(360deg);}
     }
 
+    @keyframes wingwingSiren {
+      100% { transform: rotateY(360deg); }
+      }
 
     .sendClockIcon {
         -moz-animation: rotate-loading 1.5s linear 0s infinite normal;
@@ -272,4 +340,67 @@
         -webkit-transform-origin: 50% 50%;
         animation: rotate-loading 3.5s linear 0s infinite normal;
         transform-origin: 50% 50%;
+    }
+
+    .sirenicon {
+      width: 25px;
+      height: 25px;
+    }
+
+    .warnText {
+      color :rgba(255, 99, 71, 0.938);
+      font-weight: bolder;
+    }
+
+    
+    .celText {
+      color :rgba(71, 120, 255, 0.938);
+      font-weight: bolder;
+    }
+    .wingicon { 
+      width : 150px;
+      height : 150px;
+      perspective:  300px;
+      margin : 30px 0px 40px 0px;
+    }
+    .wingicon .wingwingicon {
+      width : 150px;
+      height : 200px;
+      border : none;
+      transition: 1s;
+      animation: wingwingSiren 1s linear infinite;transform-origin: 50% 50%;
+    /*  */
+    }
+
+    .alertText {
+      text-align: center;
+      font-size: 25px;
+      font-weight: bolder;
+      margin: 30px 0px 0px 0px;
+      color: black;
+    }
+
+    .confirminputBtn {
+    background-color: #08d9d6;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    text-align: center;
+    margin : 50px 30px 0px 30px;
+    color: #252525ee;
+    }
+
+    .forbiddeninformBorder {
+      margin : 20px;
+    }
+    .orangeCancleBtn {
+      background-color: transparent;
+      width: 30px;
+      height: 30px;
+    }
+    .infoText {
+
     }
