#S06P12A507-315/[Update] 모달창 초기화 오류 수정

--- a/frontend/src/components/Modals/Game/Keyword.module.css
+++ b/frontend/src/components/Modals/Game/Keyword.module.css
@@ -219,11 +219,15 @@
   }
   .gameText {
     text-align: center;
-    color: #2959dd;
+    color: #386dff;
   }
   .yellowText {
     text-align: center;
     color : #fff226;
+  }
+  .purpleText {
+    text-align: center;
+    color : #ffa928;
   }
 
   @keyframes modal-show {
