#S06P12A507-291/[Add]노래방 기능 구현

--- a/frontend/src/components/Room/music/MusicPlayer.module.css
+++ b/frontend/src/components/Room/music/MusicPlayer.module.css
@@ -34,6 +34,9 @@
 .nextIcon {
   margin-left: 10px;
 }
+.volumeController {
+  position: absolute;
+}
 @keyframes rotate_image {
   100% {
     transform: rotate(360deg);
