--- a/frontend/src/components/Room/stream/StreamComponent.module.css
+++ b/frontend/src/components/Room/stream/StreamComponent.module.css
@@ -18,11 +18,11 @@
   height: 100%;
   z-index: 1000;
 }
-.video-container {
+/* .video-container {
   width: 250px;
   height: 250px;
   position: relative;
-}
+} */
 
 video {
   -o-object-fit: cover;
@@ -59,19 +59,20 @@ video {
   padding: 6px;
 }
 
-/* Contains the video element, used to fix video letter-boxing */
 .video-innerContainer {
   border-radius: 15px;
-  width: 400px;
-  height: 250px;
   position: relative;
   overflow: hidden;
-  margin-right: 20px;
 }
 
 .video-innerContainer.snapshotMode {
   margin: 0;
   border-radius: 0;
+}
+
+.video-innerContainer.karaokeMode {
+  width: 300px;
+  height: 200px;
 }
 .controlbox {
   width: 100px;
