--- a/frontend/src/components/Modals/Game/Keyword.module.css
+++ b/frontend/src/components/Modals/Game/Keyword.module.css
@@ -29,8 +29,6 @@
     outline: none;
     cursor: pointer;
     border: 0;
-    /* width: fit-content; */
-    height: fit-content;
   }
   .modal > section {
     width: 600px;
@@ -63,7 +61,7 @@
     background-color: #08d9d6;
     margin-right: 20px;
 }
-.confirmBtn ,.retryBtn   {
+.confirmBtn {
     background-color: #08d9d6;
     width: 80px;
     height: 40px;
@@ -73,10 +71,6 @@
     font-weight: bold;
     padding: 13px;
     text-align: center;
-    margin : 45px;
-  }
-  .retryBtn  {
-    margin : 25px;
   }
   .modal.openModal {
     display: flex;
@@ -86,17 +80,14 @@
     animation: modal-bg-show 0.3s;
   }
   .icon {
-    height: 148px;
-    width: 150px;
-    margin: 50px 0px 10px 0px;
-    display: flex;
-    justify-content: space-evenly;
+    height: 120px;
+    width: 120px;
   }
   
   .main {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     font-family: 'Poppins', sans-serif;
@@ -128,58 +119,6 @@
     margin: 15px;
     flex-direction: column;
   }
-
-  .yanginformBorder {
-    align-items: center;
-    display: flex;
-    margin:  100px 0px 20px 0px;
-    flex-direction: column;
-  }
-  .forbiddeninformBorder {
-    align-items: center;
-    display: flex;
-    margin:  65px 0px 20px 0px;
-    flex-direction: column;
-  }
-  .failBorder {
-    align-items: center;
-    display: flex;
-    margin:  100px 0px 20px 0px;
-    flex-direction: column;
-  }
-.yanginfoText {
-  font-weight: bolder;
-  font-size: 18px;
-  width : fit-content;
-}
-.forbiddenicon {
-  height: 148px;
-  width: 150px;
-  margin: -25px 0px 10px 0px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.yangconfirmBtn {
-  background-color: #08d9d6;
-    width: 100px;
-    height: 30px;
-    border-radius: 10px;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 10px;
-    text-align: center;
-    margin : 50px 30px 0px 30px;
-    color: #252525ee;
-}
-.yangicon, .failicon {
-  height: 148px;
-  width: 150px;
-  margin: 0px 0px 10px 0px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
   .informText{
       font-weight: bolder;
       font-size: 20px;
@@ -191,21 +130,12 @@
     background-color: #eee;
     padding: 10px;
     font-size: 20px;
-    /* width: 500px; */
-    /* height: 32px; */
-    /* font-size: 15px; */
-    border: 0;
-    border-radius: 15px;
-    outline: none;
-    /* padding-left: 10px; */
-    /* background-color: rgb(233, 233, 233); */
   }
 
   .text {
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
-    margin-bottom: 2rem;
   }
   .targetText {
     text-align: center;
@@ -213,21 +143,8 @@
     font-weight: bolder;
     color: #ddda29;
   }
-  .greenText {
+  .infoText {
     text-align: center;
-    color: #29dd6e;
-  }
-  .gameText {
-    text-align: center;
-    color: #386dff;
-  }
-  .yellowText {
-    text-align: center;
-    color : #fff226;
-  }
-  .purpleText {
-    text-align: center;
-    color : #ffa928;
   }
 
   @keyframes modal-show {
@@ -278,13 +195,10 @@
     font-weight: bolder;
     font-size: 20px;
     width: 100%;
-    text-align: center;
   }
   .correctText {
     width : 100%;
     color : #252525;
-    font-size: 23px;
-    margin-bottom: 0px;
   }
   
   .informText {
@@ -304,8 +218,8 @@
 }
 
 .sendClockIcon {
-    width : 100px;
-    height : 100px;
+    width : 6%;
+    height : 30%;
 }
 
     @keyframes rotate-loading {
@@ -343,14 +257,11 @@
         100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
     }
 
-    @keyframes wingwingSiren {
-        0%  {transform: rotateY(0deg);-ms-transform: rotateY(0deg); -webkit-transform: rotateY(0deg); -o-transform: rotateY(0deg); -moz-transform: rotateY(0deg);}
-        100% {transform: rotateY(360deg);-ms-transform: rotateY(360deg); -webkit-transform: rotateY(360deg); -o-transform: rotateY(360deg); -moz-transform: rotateY(360deg);}
+    @-o-keyframes rotate-loading {
+        0%  {transform: rotate(0deg);-ms-transform: rotate(0deg); -webkit-transform: rotate(0deg); -o-transform: rotate(0deg); -moz-transform: rotate(0deg);}
+        100% {transform: rotate(360deg);-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); -o-transform: rotate(360deg); -moz-transform: rotate(360deg);}
     }
 
-    @keyframes wingwingSiren {
-      100% { transform: rotateY(360deg); }
-      }
 
     .sendClockIcon {
         -moz-animation: rotate-loading 1.5s linear 0s infinite normal;
@@ -361,87 +272,4 @@
         -webkit-transform-origin: 50% 50%;
         animation: rotate-loading 3.5s linear 0s infinite normal;
         transform-origin: 50% 50%;
-    }
-
-    .sirenicon {
-      width: 25px;
-      height: 25px;
-    }
-
-    .warnText , .saywarnText {
-      color :rgba(255, 99, 71, 0.938);
-      font-weight: bolder;
-      font-size: 20px;
-    }
-    .saywarnText {
-      font-size: 25px;
-    }
-    .celText {
-      color :rgba(71, 120, 255, 0.938);
-      font-weight: bolder;
-      font-size: 20px;
-    }
-    .noText {
-      color :rgba(255, 19, 19, 0.938);
-      font-weight: bolder;
-      font-size: 20px;
-    }
-    .celebrateText {
-      color :rgba(71, 255, 86, 0.938);
-      font-weight: bolder;
-      font-size: 25px;
-    }
-    .orangeText {
-      color :rgba(255, 145, 0, 0.938);
-      font-weight: bolder;
-      font-size: 25px;
-    }
-    .wingicon { 
-      width : 150px;
-      height : 150px;
-      perspective:  300px;
-      margin : 30px 0px 75px 0px;
-    }
-    .wingicon .wingwingicon {
-      width : 150px;
-      height : 200px;
-      border : none;
-      transition: 1s;
-      animation: wingwingSiren 1s linear infinite;transform-origin: 50% 50%;
-    /*  */
-    }
-
-    .alertText {
-      text-align: center;
-      font-size: 25px;
-      font-weight: bolder;
-      margin: 5px 0px 0px 0px;
-      color: black;
-    }
-
-    .confirminputBtn {
-    background-color: #08d9d6;
-    width: 100px;
-    height: 30px;
-    border-radius: 10px;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 10px;
-    text-align: center;
-    margin : 50px 30px 0px 30px;
-    color: #252525ee;
-    }
-
-    .orangeCancleBtn {
-      background-color: transparent;
-      width: 30px;
-      height: 30px;
-    }
-    .smallicon {
-      width :40px;
-      height :40px;
-      margin : 10px;
-    }
-    .infoForbiddenText {
-      text-align: center;
     }
