--- a/frontend/src/components/Room/stream/StreamComponent.module.css
+++ b/frontend/src/components/Room/stream/StreamComponent.module.css
@@ -115,7 +115,7 @@ video {
 .forbiddenAlertGameBorder {
   display: flex;
 }
-.postitInput {
+.postitInput, .forbiddenpostitInput{
   background-color: #fff44f;
   height: 43px;
   width: 150px;
@@ -128,7 +128,7 @@ video {
   bottom: -24px;
 }
 
-.postit {
+.postit , .forbiddenpostit {
   /* background-color: #ff3399; */
   height: 43px;
   width: 150px;
@@ -167,7 +167,27 @@ video {
   left: 157px;
   bottom: 22px;
 }
-.answerpostit {
+.inputforbiddenpostit {
+  height: 43px;
+  width: 150px;
+  text-align: center;
+  font-size: 18px;
+  position: absolute;
+  color: #252525;
+  font-weight: bolder;
+  border-radius: 2px;
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  position: relative;
+  left: 157px;
+  bottom: 58px;
+}
+.answerpostit, .answerpostitforbidden {
   height: 24px;
   width: 50px;
   text-align: center;
@@ -190,8 +210,12 @@ video {
   padding: 8px;
   bottom: -5px;
 }
-.hmmpostit {
-  height: 20px;
+.answerpostitforbidden {
+  bottom: -57px;
+  left: 53px;
+}
+.hmmpostit , .hmmpostitforbidden{
+  height: 22px;
   width: 50px;
   text-align: center;
   font-weight: bolder;
@@ -208,6 +232,11 @@ video {
   left: 157px;
   font-size: 11px;
   bottom: 19px;
+  padding: 0px 10px 0px 14px;
+}
+.hmmpostitforbidden {
+  left: 210px;
+  bottom: 78px;
 }
 
 .forbiddenpostit {
@@ -216,6 +245,7 @@ video {
   left: 50px;
   position: relative;
   bottom: 9px;
+  
 }
 .yangkeyword {
   text-align: center;
@@ -243,6 +273,13 @@ video {
   font-weight: bolder;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
+}
+.forbiddenpostitInput {
+  color: #252525;
+  font-weight: bolder;
+  font-family: "Poppins", sans-serif;
+  position: relative;
+  bottom : 0px;
 }
 
 .informText .sendClockIcon {
