--- a/frontend/src/components/Room/karaoke/Karaoke.module.css
+++ b/frontend/src/components/Room/karaoke/Karaoke.module.css
@@ -9,14 +9,14 @@
   background-image: url("../../../assets/images/default2.png");
 } */
 
-/* .player-overlay {
+.player-overlay {
   position: absolute;
   width: 100%;
   height: 75%;
   left: 0;
   top: 0;
   z-index: 1;
-} */
+}
 
 .small-player-overlay {
   position: absolute;
