#S06P12A507-316/[Update] 사이렌 울릴때 포스트잇 삭제 수정

--- a/frontend/src/components/Room/stream/StreamComponent.module.css
+++ b/frontend/src/components/Room/stream/StreamComponent.module.css
@@ -126,6 +126,7 @@ video {
   justify-content: space-around;
   align-items: center;
   bottom: -24px;
+  cursor: pointer;
 }
 
 .postit , .forbiddenpostit {
