#S06P12A507-316/[Update] 이름 전달 수정

--- a/frontend/src/components/Modals/Game/Keyword.module.css
+++ b/frontend/src/components/Modals/Game/Keyword.module.css
@@ -82,8 +82,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* 팝업이 열릴때 스르륵 열리는 효과 */
-    animation: modal-bg-show 0.3s;
+    background-color: transparent;
+    animation: Keyword_modal-bg-show__MpkRI 0.3s;
+    top: 76px;
+    right: 328px;
   }
   .icon {
     height: 148px;
