--- a/frontend/src/components/Room/stream/StreamComponent.module.css
+++ b/frontend/src/components/Room/stream/StreamComponent.module.css
@@ -203,7 +203,7 @@ video {
   display: flex;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
-  position: relative;
+  /* position: relative; */
   font-size: 12px;
   width: 42px;
   background-color: #ffffff;
@@ -213,8 +213,8 @@ video {
   bottom: -5px;
 }
 .answerpostitforbidden {
-  bottom: -57px;
-  left: 53px;
+  bottom: 48px;
+  left: 55px;
 }
 .hmmpostit , .hmmpostitforbidden{
   height: 22px;
