--- a/frontend/src/components/Room/stream/StreamComponent.module.css
+++ b/frontend/src/components/Room/stream/StreamComponent.module.css
@@ -203,7 +203,7 @@ video {
   display: flex;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
-  /* position: relative; */
+  position: relative;
   font-size: 12px;
   width: 42px;
   background-color: #ffffff;
@@ -215,6 +215,7 @@ video {
 .answerpostitforbidden {
   bottom: 48px;
   left: 55px;
+  position: absolute;
 }
 .hmmpostit , .hmmpostitforbidden{
   height: 22px;
