--- a/frontend/src/components/Room/karaoke/Karaoke.module.css
+++ b/frontend/src/components/Room/karaoke/Karaoke.module.css
@@ -74,7 +74,7 @@
 .nextBtn {
   background-color: violet;
   border-radius: 15px;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .ReserveBtns {
@@ -97,7 +97,7 @@
   grid-column: 4 / 10;
   grid-row: 1 / 5;
   background-color: black;
-  background-image: url("../../../assets/logo.png");
+  /* background-image: url("../../../assets/logo.png"); */
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
