--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -71,7 +71,7 @@
 
 }
 .userInfoForm .userInfoData {
-  font-size: 1.3rem;
+  font-size: 21px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,7 +79,7 @@
   /* padding: 0px 1vh; */
 }
 .userInfoName{
-  font-size: 1.3rem;
+  font-size: 21px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -87,7 +87,7 @@
   padding: 0 0 0 1vw;
 }
 .userInfoForm .inputRow {
-  /* font-size: 1.5rem; */
+  font-size: 21px;
   margin-bottom: 2rem;
   /* width: 100%; */
   display: flex;
@@ -96,27 +96,28 @@
 }
 
 .userInfoForm .inputRow .inputRowHalf {
-  /* font-size: 1.5rem; */
+  font-size: 21px;
   width: 40%;
 }
 
 .userInfoForm .userInfoData label {
   margin: 0;
-  font-size: 1.3vw;
+  font-size: 1em;
 }
 .userInfoForm .userInfoData input {
   outline: none;
   border: none;
   background-color: transparent;
   padding: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .userInfoName input{
+  font-size: 21px;
   outline: none;
   border: none;
   background-color: transparent;
   padding: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   width: 100%;
 }
 
@@ -127,11 +128,11 @@
 
 
 .userInfoName.userInfoDataEdit input {
-  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  border-bottom: 1.5px solid rgba(0, 0, 0, 1);
 }
 
 .userInfoData.userInfoDataEdit input {
-  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  border-bottom: 1.5px solid rgba(0, 0, 0, 1);
 }
 .editRow {
   position: absolute;
