--- a/frontend/src/common/css/Main.css
+++ b/frontend/src/common/css/Main.css
@@ -10,7 +10,7 @@
   margin-top: -128px;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .intro_text {
   margin-top: 40%;
