--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -21,10 +21,15 @@
 .welcomeInfo span {
   margin-bottom: 40px;
 }
-.InfoLogo {
-  width: 300px;
-  height: 300px;
+.teamImg {
+  width: 600px;
+  height: 400px;
+  padding-right: 100px;
   margin: 0 auto;
+}
+.InfoLogo {
+  width: 100%;
+  height: 100%;
 }
 
 /* 로그인 입력 폼  */
