방 제목 api 연동 및 스타일 수정

--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -14,16 +14,20 @@
 .welcomeInfo {
   display: flex;
   flex-direction: column;
-
   justify-content: center;
   margin-right: 80px;
+}
+
+.welcomeMsg {
+  padding-left: 120px;
+  margin-bottom: 30px;
 }
 .welcomeInfo span {
   margin-bottom: 40px;
 }
 .InfoLogo {
-  width: 300px;
-  height: 300px;
+  width: 600px;
+  height: 400px;
   margin: 0 auto;
 }
 
